2025-01-07 Response 객체 공통화